GitHub Pages 자동 배포 설정 추가 - AdminRoleModal 완료

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "homepage": "https://nomadcgrang9.github.io/vite-kimbap-school",
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
