--- a/package.json
+++ b/package.json
@@ -11,9 +11,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@cloudflare/workers-types": "^4.20250924.0",
+    "@hono/vite-cloudflare-pages": "^0.4.2",
     "@supabase/supabase-js": "^2.57.4",
+    "hono": "^4.9.8",
     "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+    "react-dom": "^19.1.1",
+    "wrangler": "^4.39.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
